# flaretro

./: .gitignore  Cargo.toml  README.md  build.rs  build.zig  build.zig.zon  rustfmt.toml
c/: main  main.c
mods/: _.toml
mods/D2sw/: settings.toml
mods/D2sw/maps/: Spawn.toml  spawn.toml
mods/D2sw/maps/Act1/: Hyperspace.toml
mods/D2sw/maps/act1/: hyperspace.toml
mods/fantasycore/: settings.toml
src/: glad.rs  lib.c  lib.rs  libretro.zig
src/flaretriiablo/: AUTHORS  dt1.rs  mod.rs
src/glad/: gl.rs
