[workspace]
members = ["third-party/*"]

[package]
name = "flaretro"
version = "0.1.18"
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true

[dependencies]
rust-libretro-sys = "0.1"
glad = { path = "third-party/glad" }
libc = "0.2"
const_format = "0.2"
static_assertions = "1.1"
# toml_edit = { version = "0.14", features = ["serde", "perf"] }
# glam = { version = "0.21", features = ["bytemuck"] }
